controller/pkg/kgateway/setup/testdata/standard/auto-host-plus-host-rewrite-out.yaml
clusters:
- connectTimeout: 5s
  dnsLookupFamily: V4_PREFERRED
  loadAssignment:
    clusterName: backend_gwtest_httpbin-static_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: httpbin.default.svc
              portValue: 8000
          healthCheckConfig:
            hostname: httpbin.default.svc
          hostname: httpbin.default.svc
  metadata: {}
  name: backend_gwtest_httpbin-static_0
  type: STRICT_DNS
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_kubernetes_443
  type: EDS
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_gwtest_reviews_8080
  type: EDS
endpoints:
- clusterName: kube_gwtest_reviews_8080
  endpoints:
  - lbEndpoints:
    - endpoint:
        address:
          socketAddress:
            address: 10.244.1.11
            portValue: 8080
      loadBalancingWeight: 1
    loadBalancingWeight: 1
listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  name: listener~8080
routes:
- ignorePortInHostMatching: true
  name: listener~8080
  virtualHosts:
  - domains:
    - www.example.com
    name: listener~8080~www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /headers-override
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            autoHostRewrite:
            - gateway.kgateway.dev/TrafficPolicy/gwtest/route-auto-hostrewrite-policy
      name: listener~8080~www_example_com-route-0-httproute-my-route-gwtest-0-0-matcher-0
      route:
        cluster: backend_gwtest_httpbin-static_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        hostRewriteLiteral: foo.override
        regexRewrite:
          pattern:
            regex: .*
          substitution: /headers
    - match:
        prefix: /
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            autoHostRewrite:
            - gateway.kgateway.dev/TrafficPolicy/gwtest/route-auto-hostrewrite-policy
      name: listener~8080~www_example_com-route-1-httproute-my-route-gwtest-1-0-matcher-0
      route:
        autoHostRewrite: true
        cluster: backend_gwtest_httpbin-static_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
